<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sanchezamaurys.calculadoradeedad.MainActivity"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@drawable/fondo2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:height="30dp"
        android:text="@string/tituloElegir"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBornDate"
        android:text="@string/diaMesAño"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:textColor="#000000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloEscogerFecha"
        android:id="@+id/btnSelectDatePickerDialog"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:background="@drawable/selectdate"
        android:contentDescription="@string/EscogerFecha"/>

    <TextView
        android:id="@+id/tvCalculatedAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/EdadCalculada"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:padding="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EdadRecientemente"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoHasCalculado"
        android:textColor="#FF0000"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:id="@+id/tvActualAge"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pnultimaEdad"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoExisteHistorico"
        android:textColor="#FF0000"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:id="@+id/tvPenultimateAge"
        android:padding="5dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/refreshdate"
        android:layout_gravity="center"
        android:id="@+id/imgBtnRefreshAll"
        android:contentDescription="@string/cleanAll"/>
</LinearLayout>
